deployment/api-gateway-admin-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gov-service-admin-api-gateway
  namespace: gov-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin_api_gateway
  template:
    metadata:
     labels:
       app: admin_api_gateway
    spec:
      containers:
        - name: admin-api-gateway-container
          image: abdulrahimom/govservice-adminapigateway-amd:v1.0.3
          ports:
            - containerPort: 4001
          resources:
            limits:
              memory: 212Mi
              cpu: ".2"
            requests:
              memory: 150Mi
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-api-gateway
  namespace: gov-service
spec:
  type: NodePort
  ports:
    - targetPort: 4001
      port: 4001
      nodePort: 30016
  selector: 
    app: admin_api_gateway
