deployment/api-gateway-user-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gov-service-user-api-gateway
  namespace: gov-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user_api_gateway
  template:
    metadata:
     labels:
       app: user_api_gateway
    spec:
      containers:
        - name: user-api-gateway-container
          image: abdulrahimom/govservice-userapigateway-amd:v1.0.3
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: 212Mi
              cpu: ".2"
            requests:
              memory: 150Mi
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: user-api-gateway
  namespace: gov-service
spec:
  type: NodePort
  ports:
    - targetPort: 4000
      port: 4000
      nodePort: 30015
  selector: 
    app: user_api_gateway
