deployment/svc-chat-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gov-service-chat-svc
  namespace: gov-service
spec:
  selector:
    matchLabels:
      app: chat_service
  template:
    metadata:
      labels:
        app: chat_service
    spec:
      containers:
        - image: abdulrahimom/govservice-chat-svc-amd:v1.0.3
          name: chat-svc-container
          ports:
            - containerPort: 50054
          resources:
            limits:
              memory: 212Mi
              cpu: ".2"
            requests:
              memory: 150Mi
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: chat-services
  namespace: gov-service
spec: 
  type: ClusterIP
  ports:
    - port: 50054
      targetPort: 50054
  selector:
    app: chat_service
