deployment/ingres-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gov-service-ingres
  namespace: gov-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    spec.ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
        }
spec:
  tls:
    - hosts:
      - k8s.gov-service.abdulrahim.tech
      - admin.k8s.gov-service.abdulrahim.tech
      # secretName: gov-service-new-tls 
  rules:
    - host: k8s.gov-service.abdulrahim.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: user-api-gateway
                port:
                  number: 4000
    - host: admin.k8s.gov-service.abdulrahim.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: admin-api-gateway
                port:
                  number: 4001
